force-app/main/default/objects/Tournament_Team__c/fields/Draws__c.field-meta.xml
<CustomField>
    <fullName>Draws__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Draws</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>