force-app/main/default/objects/Tournament_Team__c/fields/Eliminated__c.field-meta.xml
<CustomField>
    <fullName>Eliminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminated</label>
    <type>Checkbox</type>
</CustomField>