force-app/main/default/objects/Tournament_Team__c/fields/Goals_Against__c.field-meta.xml
<CustomField>
    <fullName>Goals_Against__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goals Against</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>