force-app/main/default/objects/Tournament_Team__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Matches_Played__c</fullName>
    <formula>Draws__c +  Wins__c +  Losses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matches Played</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>