force-app/main/default/objects/Tournament_Team__c/fields/Qualification_Points__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Points__c</fullName>
    <description>Points used to qualify teams to later stages.</description>
    <formula>( Wins__c * 3 ) + Draws__c + Goal_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>