force-app/main/default/objects/Tournament_Team__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Tournament Teams</relationshipLabel>
    <relationshipName>Tournament_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>